--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "canvas": "^2.8.0",
+    "d3": "^7.0.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "konva": "^8.0.4",
+    "quill": "^1.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
