--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "d3": "^7.0.0",
     "html2canvas": "^1.0.0-rc.7",
     "konva": "^8.0.4",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quilljs": "^1.2.15",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
