--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "share-nw-webtool",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cullenriley.github.io/ShareNWWebtool",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "canvas": "^2.8.0",
     "d3": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "html2canvas": "^1.0.0-rc.7",
     "konva": "^8.0.4",
     "quill": "^1.3.7",
@@ -21,6 +23,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
